xul.collapsed and label.textContent fixes, css flex for register dialog

--- a/chrome/content/skin/common/smartTemplate-register.css
+++ b/chrome/content/skin/common/smartTemplate-register.css
@@ -83,25 +83,28 @@ td {
   vertical-align: middle;
   display: inline-block; /* added 02.09.12 to center font in box */
 }
+
 .product {
-  background-color: #405080; /* affects text color! */
-  /*
-  background: rgba(180,180,180,0.8);
-  background: linear-gradient(to bottom, rgb(254, 204, 177) 0%, rgb(241, 116, 50) 50%, rgb(234, 85, 7) 51%, rgb(251, 149, 94) 100%); 
-  border: 2px solid #eee !important; */
+  background-color: #405080;
+  background-clip: text;
   border-radius: 2px;
   box-shadow: inset 0 0 2px 1px rgba(0,0,0,0.23);
   color: transparent;
-  background-clip: text;
-  text-shadow: 0px 1px 1px rgba(255,255,255,0.5);
-  display: inline-block;
+  display: inline-flex !important;
+  flex-direction: column;
+  flex-flow: row;
+  flex-wrap: nowrap;
+  text-shadow: 0px 1px 1px rgba(255,255,255,0.4);
   font-family: calibri, arial, sans-serif;
-  font-size: 27pt;
+  font-size: 25pt;
   font-weight: 900;
   height: auto;
   padding: 0.3em 0.4em 0.2em 0.3em;
   vertical-align: middle;
+  white-space: nowrap;
 }
+
+
 .para {
   margin: 0.5em 0;
 	text-align: justify;
